--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="favicon.ico?"/>  <!-- Replace with Fabriqate Icon -->
+    <link rel="shortcut icon" href="icon.ico?"/>  <!-- Replace with Fabriqate Icon -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="manifest.json"/>
-
     <title>Fabriqate</title>
   </head>
   <body>
